[project]
name = "xiaohongshu-aio"
version = "0.1.0"
description = "Xiaohongshu MCP REST API Client"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "typer>=0.12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rich>=13.0.0"
]

[project.scripts]
xhs = "xiaohongshu_aio.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
required-version = "3.12"
